[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irl-sdk"
version = "0.2.0"
description = "Python SDK for the IRL Engine — cryptographic pre-execution compliance rail"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MacroPulse", email = "hello@macropulse.live"},
]
keywords = ["trading", "compliance", "ai", "crypto", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["irl_sdk"]
